--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@apollo/client": "^3.6.9",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
@@ -24,7 +28,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
-    "react-query": "^3.39.2",
+    "react-query": "3",
     "zod": "^3.18.0"
   },
   "devDependencies": {
