--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^3.9.1",
     "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-query": "3",
+    "recharts": "2.1.12",
     "zod": "^3.18.0"
   },
   "devDependencies": {
