feat: Work on auth flow

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
     "react-hot-toast": "^2.3.0",
     "react-query": "3",
     "recharts": "2.1.12",
