--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "@typescript-eslint/parser": "^5.0.0",
     "@uiball/loaders": "^1.2.6",
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.3.1",
+    "cookies-next": "^2.1.1",
+    "csstype": "^3.0.10",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "next": "12.2.5",
+    "next-auth": "^4.18.7",
+    "prop-types": "^15.6.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
